--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.7'
 x-services-defaults: &defaults
   restart: on-failure
   networks:
-    - risk-gui_ntk
+    - gui_ntk
   extra_hosts:
       - "host.docker.internal:host-gateway"
 
@@ -13,15 +13,14 @@ services:
     container_name: gui_api
     build:
       context: .
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     env_file:
       - .env
     volumes:
       - .:/src/
     ports:
       - "${PORT}:${PORT}"
-    depends_on:
-      - db
+   
 
 networks:
   gui_ntk: {}
