refatator bug fix

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ ENVIRONMENT=development # development | production
 
 
 AUTH_EMAIL=your_email@gmail.com
-GPT_TOKEN=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
+GPT_TOKEN="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"
 
 BASE_PATH=/api/v1
 
